--- a/train-schedule-kuber-canary.yml
+++ b/train-schedule-kuber-canary.yml
@@ -20,7 +20,7 @@ metadata:
   labels:
     app: train-schedule
 spec:
-  replicas: 2
+  replicas: $CANARY_REPLICAS
   selector:
     matchLabels:
       app: train-schedule
