--- a/train-schedule-kube-canary.yml
+++ b/train-schedule-kube-canary.yml
@@ -1,11 +1,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: train-schedule-service
+  name: train-schedule-service-canary
 spec:
   type: NodePort
   selector:
     app: train-schedule
+    track: canary
   ports:
   - protocol: TCP
     port: 8080
@@ -16,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: train-schedule-deployment
+  name: train-schedule-deployment-canary
   labels:
     app: train-schedule
 spec:
